unpackaged/main/default/objects/traa_Employment_History__c/traa_Employment_History__c.object-meta.xml
<CustomObject>
    <description>Stores history of employment.</description>
    <label>Employment History</label>
    <nameField>
        <displayFormat>EH-{0000}</displayFormat>
        <label>Employment History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employment Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>