unpackaged/main/default/objects/traa_Employment_History__c/fields/traa_Application__c.field-meta.xml
<CustomField>
    <fullName>traa_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to application record</description>
    <inlineHelpText>Lookup to application record</inlineHelpText>
    <label>Application</label>
    <referenceTo>hed__Application__c</referenceTo>
    <relationshipLabel>Employment Histories</relationshipLabel>
    <relationshipName>traa_Employment_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>