unpackaged/main/default/objects/traa_Employment_History__c/fields/traa_Current_Employer__c.field-meta.xml
<CustomField>
    <fullName>traa_Current_Employer__c</fullName>
    <description>Current Employer</description>
    <inlineHelpText>Current Employer</inlineHelpText>
    <label>Current Employer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>