unpackaged/main/default/objects/traa_Employment_History__c/fields/traa_Description__c.field-meta.xml
<CustomField>
    <fullName>traa_Description__c</fullName>
    <description>Description of Employment</description>
    <inlineHelpText>Description of Employment</inlineHelpText>
    <label>Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>