unpackaged/main/default/objects/traa_Employment_History__c/fields/traa_Employer_Name__c.field-meta.xml
<CustomField>
    <fullName>traa_Employer_Name__c</fullName>
    <description>Name of the Employer</description>
    <inlineHelpText>Name of the Employer</inlineHelpText>
    <label>Employer Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>