unpackaged/main/default/objects/traa_Employment_History__c/fields/traa_End_Date__c.field-meta.xml
<CustomField>
    <fullName>traa_End_Date__c</fullName>
    <description>Employment End Date</description>
    <inlineHelpText>Employment End Date</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>