unpackaged/main/default/objects/traa_Employment_History__c/fields/traa_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>traa_Start_Date__c</fullName>
    <description>Employment Start Date</description>
    <inlineHelpText>Employment Start Date</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>