unpackaged/main/default/objects/traa_Employment_History__c/fields/traa_Title__c.field-meta.xml
<CustomField>
    <fullName>traa_Title__c</fullName>
    <description>Position of Employee</description>
    <inlineHelpText>Position of Employee</inlineHelpText>
    <label>Title</label>
    <length>80</length>
    <type>Text</type>
</CustomField>